--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.11"
   },
   "devDependencies": {
